all.csvに質問を追加して実験

--- a/learning/prototype/LSI_in_sckit_learn_4.ipynb
+++ b/learning/prototype/LSI_in_sckit_learn_4.ipynb
@@ -306,9 +306,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7, 2945)\n",
-      "(1, 2945)\n",
-      "(1, 2945)\n",
+      "(7, 2949)\n",
+      "(1, 2949)\n",
+      "(1, 2949)\n",
       "(7, 6)\n",
       "(1, 6)\n",
       "(1, 6)\n"
@@ -344,13 +344,15 @@
     {
      "data": {
       "text/plain": [
-       "[(0.0, '育児 短時間 勤務 申請 書 いつ 提出 する', '育児短時間勤務申請書はいつまでに提出するのか？'),\n",
-       " (0.0, '育児 短時間 勤務 申請 書 曜日 別 申請 できる', '育児短時間勤務申請書は曜日別に申請できるか？'),\n",
-       " (0.0, '育児 短時間 勤務 申請 どこ 提出 する よい', '育児短時間勤務申請はどこへ提出すればよいか？'),\n",
-       " (0.0, '子供 生まれる', '子供が生まれた'),\n",
-       " (0.0, 'ＶＩＳＡ 勘定 科目 わかる ない', 'VISAの勘定科目がわからない'),\n",
-       " (0.0, '海外 出張 する 旅費 精算 する どう する 良い', '海外出張したときの旅費精算をしたいがどうしたら良い'),\n",
-       " (0.0, '保険証 失 くい', '保険証を失くした')]"
+       "[(0.30098030305947371, '育児 短時間 勤務 申請 書 曜日 別 申請 できる', '育児短時間勤務申請書は曜日別に申請できるか？'),\n",
+       " (0.27128259378627795, '子供 生まれる', '子供が生まれた'),\n",
+       " (0.11583867147718928, 'ＶＩＳＡ 勘定 科目 わかる ない', 'VISAの勘定科目がわからない'),\n",
+       " (0.015603074581426152,\n",
+       "  '海外 出張 する 旅費 精算 する どう する 良い',\n",
+       "  '海外出張したときの旅費精算をしたいがどうしたら良い'),\n",
+       " (-0.014778630296399309, '育児 短時間 勤務 申請 書 いつ 提出 する', '育児短時間勤務申請書はいつまでに提出するのか？'),\n",
+       " (-0.027046106228831482, '育児 短時間 勤務 申請 どこ 提出 する よい', '育児短時間勤務申請はどこへ提出すればよいか？'),\n",
+       " (-0.089544366320079033, '保険証 失 くい', '保険証を失くした')]"
       ]
      },
      "execution_count": 13,
@@ -375,13 +377,15 @@
     {
      "data": {
       "text/plain": [
-       "[(0.0, '育児 短時間 勤務 申請 書 いつ 提出 する', '育児短時間勤務申請書はいつまでに提出するのか？'),\n",
-       " (0.0, '育児 短時間 勤務 申請 書 曜日 別 申請 できる', '育児短時間勤務申請書は曜日別に申請できるか？'),\n",
-       " (0.0, '育児 短時間 勤務 申請 どこ 提出 する よい', '育児短時間勤務申請はどこへ提出すればよいか？'),\n",
-       " (0.0, '子供 生まれる', '子供が生まれた'),\n",
-       " (0.0, 'ＶＩＳＡ 勘定 科目 わかる ない', 'VISAの勘定科目がわからない'),\n",
-       " (0.0, '海外 出張 する 旅費 精算 する どう する 良い', '海外出張したときの旅費精算をしたいがどうしたら良い'),\n",
-       " (0.0, '保険証 失 くい', '保険証を失くした')]"
+       "[(0.57701425482535174, '子供 生まれる', '子供が生まれた'),\n",
+       " (0.5419804837335026, '育児 短時間 勤務 申請 書 曜日 別 申請 できる', '育児短時間勤務申請書は曜日別に申請できるか？'),\n",
+       " (0.4005838819561548, '育児 短時間 勤務 申請 書 いつ 提出 する', '育児短時間勤務申請書はいつまでに提出するのか？'),\n",
+       " (0.3609720889647442, '育児 短時間 勤務 申請 どこ 提出 する よい', '育児短時間勤務申請はどこへ提出すればよいか？'),\n",
+       " (0.25732149070811716, 'ＶＩＳＡ 勘定 科目 わかる ない', 'VISAの勘定科目がわからない'),\n",
+       " (0.21622484475372694,\n",
+       "  '海外 出張 する 旅費 精算 する どう する 良い',\n",
+       "  '海外出張したときの旅費精算をしたいがどうしたら良い'),\n",
+       " (0.098324589518073005, '保険証 失 くい', '保険証を失くした')]"
       ]
      },
      "execution_count": 14,
@@ -463,9 +467,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7, 2945)\n",
-      "(1, 2945)\n",
-      "(1, 2945)\n",
+      "(7, 2949)\n",
+      "(1, 2949)\n",
+      "(1, 2949)\n",
       "(7, 8)\n",
       "(1, 8)\n",
       "(1, 8)\n"
@@ -501,15 +505,15 @@
     {
      "data": {
       "text/plain": [
-       "[(0.70141489349102015, '保険証 失 くい', '保険証を失くした'),\n",
-       " (0.65582999615287074,\n",
+       "[(0.99196606451366331, '育児 短時間 勤務 申請 書 曜日 別 申請 できる', '育児短時間勤務申請書は曜日別に申請できるか？'),\n",
+       " (0.77227366549150434, '子供 生まれる', '子供が生まれた'),\n",
+       " (0.73631041180303203, '育児 短時間 勤務 申請 書 いつ 提出 する', '育児短時間勤務申請書はいつまでに提出するのか？'),\n",
+       " (0.73622368053059262, '育児 短時間 勤務 申請 どこ 提出 する よい', '育児短時間勤務申請はどこへ提出すればよいか？'),\n",
+       " (0.68095831853220967, '保険証 失 くい', '保険証を失くした'),\n",
+       " (0.28560722837089869,\n",
        "  '海外 出張 する 旅費 精算 する どう する 良い',\n",
        "  '海外出張したときの旅費精算をしたいがどうしたら良い'),\n",
-       " (0.64529013998095408, '育児 短時間 勤務 申請 書 曜日 別 申請 できる', '育児短時間勤務申請書は曜日別に申請できるか？'),\n",
-       " (0.64441446184776363, 'ＶＩＳＡ 勘定 科目 わかる ない', 'VISAの勘定科目がわからない'),\n",
-       " (0.57396131054704169, '育児 短時間 勤務 申請 どこ 提出 する よい', '育児短時間勤務申請はどこへ提出すればよいか？'),\n",
-       " (0.54255708967841776, '子供 生まれる', '子供が生まれた'),\n",
-       " (0.45921902111447244, '育児 短時間 勤務 申請 書 いつ 提出 する', '育児短時間勤務申請書はいつまでに提出するのか？')]"
+       " (0.26855445551768781, 'ＶＩＳＡ 勘定 科目 わかる ない', 'VISAの勘定科目がわからない')]"
       ]
      },
      "execution_count": 18,
@@ -541,15 +545,15 @@
     {
      "data": {
       "text/plain": [
-       "[(0.70141489349102015, '保険証 失 くい', '保険証を失くした'),\n",
-       " (0.65582999615287074,\n",
+       "[(0.99727871571334281, '子供 生まれる', '子供が生まれた'),\n",
+       " (0.98556090134864704, '育児 短時間 勤務 申請 書 いつ 提出 する', '育児短時間勤務申請書はいつまでに提出するのか？'),\n",
+       " (0.98553299677396911, '育児 短時間 勤務 申請 どこ 提出 する よい', '育児短時間勤務申請はどこへ提出すればよいか？'),\n",
+       " (0.81970989508321235, '育児 短時間 勤務 申請 書 曜日 別 申請 できる', '育児短時間勤務申請書は曜日別に申請できるか？'),\n",
+       " (0.29917165382153255, '保険証 失 くい', '保険証を失くした'),\n",
+       " (0.27171309988387904,\n",
        "  '海外 出張 する 旅費 精算 する どう する 良い',\n",
        "  '海外出張したときの旅費精算をしたいがどうしたら良い'),\n",
-       " (0.64529013998095408, '育児 短時間 勤務 申請 書 曜日 別 申請 できる', '育児短時間勤務申請書は曜日別に申請できるか？'),\n",
-       " (0.64441446184776363, 'ＶＩＳＡ 勘定 科目 わかる ない', 'VISAの勘定科目がわからない'),\n",
-       " (0.57396131054704169, '育児 短時間 勤務 申請 どこ 提出 する よい', '育児短時間勤務申請はどこへ提出すればよいか？'),\n",
-       " (0.54255708967841776, '子供 生まれる', '子供が生まれた'),\n",
-       " (0.45921902111447244, '育児 短時間 勤務 申請 書 いつ 提出 する', '育児短時間勤務申請書はいつまでに提出するのか？')]"
+       " (0.25336304176733482, 'ＶＩＳＡ 勘定 科目 わかる ない', 'VISAの勘定科目がわからない')]"
       ]
      },
      "execution_count": 19,
@@ -579,40 +583,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ボキャブラリーの影響調査についての結果\n",
+    "# ボキャブラリーに質問を追加することについての実験結果\n",
     "\n",
-    "- ボキャブラリーが増え、余計な単語が増えてしまったことにより既存のままだと精度が低くなってしまった?\n",
-    "- LSIを使っている場合は、次元削減により一定に削減されるため精度が低くなることはなかった。\n",
-    "- ボキャブラリーが増えたことによりLSIで関連性の有りそうな質問が見つかるようになった。 <- 重要"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "# LSIについての調査結果\n",
-    "\n",
-    "\n",
-    "TF-IDFによって単語の重み(出現頻度)がわかるが、SVDで次元圧縮することにより、Questionの他の単語とどのくらい関連があるかを見て近い意味の単語を近いベクトルとして計算できる。\n",
-    "マイオペの場合、検索語も検索対象も単語数が少ないことが多いため、関連がある(一緒に使われている)かどうかでの検索での改善が若干難しそう。\n",
-    "-> 「こんにちは」、「こんにちわ」が一致してくれないのはどちらも1単語だからだと思われる。\n",
-    "\n",
-    "質問するときは少なくとも、1単語プラス動詞とかでやったほうが改善する。\n",
-    "\n",
-    "LSIを利用しないままだと、おそらく質問が増えるほどにsimilalityが落ちていくと思われるので、LSIを入れておいたほうが良さそう。\n",
-    "\n",
-    "一般的な単語と、それを使った質問例文がボキャブラリーとしてfitできると、ひらがな・カタカナの違いなどは改善しそう。\n",
-    "\n",
-    "\n",
-    "\n",
-    "調査時に参考にしたページ\n",
-    "\n",
-    "https://nlp.stanford.edu/IR-book/html/htmledition/latent-semantic-indexing-1.html\n",
-    "http://elsur.jpn.org/reading_notes/Greenacre1984.pdf\n",
-    "http://qiita.com/yuku_t/items/483b56be83a3a5423b09\n",
-    "https://ja.wikipedia.org/wiki/%E7%89%B9%E7%95%B0%E5%80%A4%E5%88%86%E8%A7%A3"
+    "- ボキャブラリーを追加することで、ひらがな、漢字の違いなどがあっても関連性を見つけることができ、LSIがないときには得られなかった解答が得られるようになった。"
    ]
   },
   {
