参考リンクを追加、リンク先が何をやっているのか全然わからない...

--- a/learning/prototype/rank_learning/07-for-myope.ipynb
+++ b/learning/prototype/rank_learning/07-for-myope.ipynb
@@ -37,9 +37,21 @@
     "\n",
     "まずはこれを使って試してみることにした\n",
     "\n",
+    "参考: https://gist.github.com/agramfort/2071994\n",
+    "\n",
+    "\n",
     "## listwise\n",
     "一番複雑ということなので一旦見送り\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
