--- a/learning/prototype/wiki_corpus/try-gensim.ipynb
+++ b/learning/prototype/wiki_corpus/try-gensim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -72,54 +72,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.externals import joblib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "SystemError",
-     "evalue": "<built-in function Tagger_parseToNode> returned a result with an error set",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mSystemError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-3bec9e040740>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtokenized_sentences\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMecabTokenizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'question'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mjoblib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokenized_sentences\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-28-82e852f7ff5e>\u001b[0m in \u001b[0;36mtokenize\u001b[0;34m(self, texts)\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0msplited_texts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtexts\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m             \u001b[0msplited_texts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenize_single_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0msplited_texts\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-28-82e852f7ff5e>\u001b[0m in \u001b[0;36mtokenize_single_text\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mtokenize_single_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m         \u001b[0mnode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtagger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparseToNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m         \u001b[0mword_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/shwld/.pyenv/versions/3.5.2/envs/donusagi-bot3/lib/python3.5/site-packages/MeCab.py\u001b[0m in \u001b[0;36mparseToNode\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m    280\u001b[0m     \u001b[0m__repr__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_swig_repr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    281\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mreturn\u001b[0m \u001b[0m_MeCab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTagger_parse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 282\u001b[0;31m     \u001b[0;32mdef\u001b[0m \u001b[0mparseToNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mreturn\u001b[0m \u001b[0m_MeCab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTagger_parseToNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    283\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mparseNBest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mreturn\u001b[0m \u001b[0m_MeCab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTagger_parseNBest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    284\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mparseNBestInit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mreturn\u001b[0m \u001b[0m_MeCab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTagger_parseNBestInit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mSystemError\u001b[0m: <built-in function Tagger_parseToNode> returned a result with an error set"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6796444,)\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5300000-5400000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5400000-5500000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5500000-5600000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5600000-5700000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5700000-5800000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5800000-5900000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5900000-6000000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6000000-6100000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6100000-6200000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6200000-6300000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6300000-6400000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6400000-6500000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6500000-6600000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6600000-6700000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6700000-6800000\n"
      ]
     }
    ],
    "source": [
-    "tokenized_sentences = MecabTokenizer().tokenize(data['question'])\n",
-    "joblib.dump(tokenized_sentences, '/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list')"
+    "from sklearn.externals import joblib\n",
+    "\n",
+    "print(data['question'].shape)\n",
+    "\n",
+    "i = 5300000\n",
+    "j = 5400000\n",
+    "while i < data['question'].shape[0]:\n",
+    "    filename = '/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_{start}-{end}'.format(start=i, end=j)\n",
+    "    print(filename)\n",
+    "    tokenized_sentences = None\n",
+    "    tokenized_sentences = MecabTokenizer().tokenize(data['question'][i:j])\n",
+    "    joblib.dump(tokenized_sentences, filename)\n",
+    "    i = i + 100000\n",
+    "    j = j + 100000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_0-100000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_100000-200000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_200000-300000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_300000-400000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_400000-500000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_500000-600000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_600000-700000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_700000-800000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_800000-900000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_900000-1000000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_1000000-1100000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_1100000-1200000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_1200000-1300000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_1300000-1400000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_1400000-1500000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_1500000-1600000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_1600000-1700000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_1700000-1800000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_1800000-1900000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_1900000-2000000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_2000000-2100000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_2100000-2200000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_2200000-2300000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_2300000-2400000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_2400000-2500000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_2500000-2600000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_2600000-2700000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_2700000-2800000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_2800000-2900000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_2900000-3000000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_3000000-3100000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_3100000-3200000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_3200000-3300000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_3300000-3400000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_3400000-3500000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_3500000-3600000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_3600000-3700000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_3700000-3800000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_3800000-3900000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_3900000-4000000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_4000000-4100000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_4100000-4200000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_4200000-4300000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_4300000-4400000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_4400000-4500000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_4500000-4600000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_4600000-4700000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_4700000-4800000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_4800000-4900000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_4900000-5000000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5000000-5100000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5100000-5200000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5200000-5300000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5300000-5400000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5400000-5500000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5500000-5600000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5600000-5700000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5700000-5800000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5800000-5900000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_5900000-6000000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6000000-6100000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6100000-6200000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6200000-6300000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6300000-6400000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6400000-6500000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6500000-6600000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6600000-6700000\n",
+      "/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_6700000-6800000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6696444"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from sklearn.externals import joblib\n",
+    "\n",
+    "from gensim import models\n",
+    "from gensim import corpora, models, similarities\n",
+    "\n",
+    "i = 0\n",
+    "j = 100000\n",
+    "tokenized_sentences = []\n",
+    "while i < data['question'].shape[0]:\n",
+    "    filepath = '/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list_{start}-{end}'.format(start=i, end=j)\n",
+    "    print(filepath)\n",
+    "    if os.path.exists(filepath):\n",
+    "        tokenized_sentences = tokenized_sentences + joblib.load(filepath)\n",
+    "    i = i + 100000\n",
+    "    j = j + 100000\n",
+    "\n",
+    "len(tokenized_sentences)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# tokenized_sentences = joblib.load('/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list')"
+    "# joblib.dump(tokenized_sentences, '/Users/shwld/Downloads/wiki-corpus/tokenized_sentences_list')"
    ]
   },
   {
@@ -158,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -184,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -212,29 +331,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(lsi_corpus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -246,31 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 0.03736972832018761),\n",
-       " (1, 0.14905692857376651),\n",
-       " (2, -0.21773407396425185),\n",
-       " (3, -0.097940788364416956),\n",
-       " (4, 0.027534233926046335),\n",
-       " (5, 0.045439409410188321),\n",
-       " (6, 0.0024892799939609366),\n",
-       " (7, 0.0034500561036447455),\n",
-       " (8, 0.045117513174053991),\n",
-       " (9, 0.016358396992505981)]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vec_lsi = lsi[query_vector]\n",
     "vec_lsi"
@@ -278,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -290,31 +378,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(9, 0.76265842),\n",
-       " (7, 0.70202541),\n",
-       " (2, 1.5832484e-08),\n",
-       " (6, 6.9849193e-09),\n",
-       " (5, 5.4205884e-09),\n",
-       " (0, -7.4505806e-09),\n",
-       " (3, -1.0011718e-08),\n",
-       " (1, -1.4668331e-08),\n",
-       " (8, -1.5599653e-08),\n",
-       " (4, -2.2351742e-08)]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sims = lsi_index[vec_lsi]\n",
     "sims = sorted(enumerate(sims), key=lambda item: -item[1])\n",
@@ -331,6 +399,15 @@
     "- gensimでcosine_similarity\n",
     "  - http://blog.yuku-t.com/entry/20110623/1308810518"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
