badフィードバックを使ってコサイン類似検索するサンプルを実装

--- a/learning/prototype/good_bad_feedbacks/1_two_step_cosine_similarity_good.ipynb
+++ b/learning/prototype/good_bad_feedbacks/1_two_step_cosine_similarity_good.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -242,16 +242,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017/09/23 PM 05:54:53 TextArray#__init__ start\n",
-      "2017/09/23 PM 05:54:53 TextArray#to_vec start\n",
-      "2017/09/23 PM 05:54:53 TextArray#to_vec end\n",
-      "2017/09/23 PM 05:54:53 TextArray#__init__ start\n",
-      "2017/09/23 PM 05:54:53 TextArray#to_vec start\n",
-      "2017/09/23 PM 05:54:53 TextArray#to_vec end\n",
-      "2017/09/23 PM 05:54:53 TextArray#to_vec start\n",
-      "2017/09/23 PM 05:54:53 TextArray#to_vec end\n",
-      "2017/09/23 PM 05:54:53 TextArray#to_vec start\n",
-      "2017/09/23 PM 05:54:53 TextArray#to_vec end\n"
+      "2017/09/23 PM 05:58:46 TextArray#__init__ start\n",
+      "2017/09/23 PM 05:58:46 TextArray#to_vec start\n",
+      "2017/09/23 PM 05:58:46 TextArray#to_vec end\n",
+      "2017/09/23 PM 05:58:46 TextArray#__init__ start\n",
+      "2017/09/23 PM 05:58:46 TextArray#to_vec start\n",
+      "2017/09/23 PM 05:58:46 TextArray#to_vec end\n",
+      "2017/09/23 PM 05:58:46 TextArray#to_vec start\n",
+      "2017/09/23 PM 05:58:46 TextArray#to_vec end\n",
+      "2017/09/23 PM 05:58:46 TextArray#to_vec start\n",
+      "2017/09/23 PM 05:58:46 TextArray#to_vec end\n"
      ]
     },
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -385,16 +385,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017/09/23 PM 05:58:07 TextArray#__init__ start\n",
-      "2017/09/23 PM 05:58:07 TextArray#to_vec start\n",
-      "2017/09/23 PM 05:58:07 TextArray#to_vec end\n",
-      "2017/09/23 PM 05:58:07 TextArray#__init__ start\n",
-      "2017/09/23 PM 05:58:07 TextArray#to_vec start\n",
-      "2017/09/23 PM 05:58:07 TextArray#to_vec end\n",
-      "2017/09/23 PM 05:58:07 TextArray#to_vec start\n",
-      "2017/09/23 PM 05:58:07 TextArray#to_vec end\n",
-      "2017/09/23 PM 05:58:07 TextArray#to_vec start\n",
-      "2017/09/23 PM 05:58:07 TextArray#to_vec end\n"
+      "2017/09/23 PM 05:59:36 TextArray#__init__ start\n",
+      "2017/09/23 PM 05:59:36 TextArray#to_vec start\n",
+      "2017/09/23 PM 05:59:36 TextArray#to_vec end\n",
+      "2017/09/23 PM 05:59:36 TextArray#__init__ start\n",
+      "2017/09/23 PM 05:59:36 TextArray#to_vec start\n",
+      "2017/09/23 PM 05:59:36 TextArray#to_vec end\n",
+      "2017/09/23 PM 05:59:36 TextArray#to_vec start\n",
+      "2017/09/23 PM 05:59:36 TextArray#to_vec end\n",
+      "2017/09/23 PM 05:59:36 TextArray#to_vec start\n",
+      "2017/09/23 PM 05:59:36 TextArray#to_vec end\n"
      ]
     },
     {
@@ -408,9 +408,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.07292792],\n",
-       "       [ 0.04710154],\n",
-       "       [ 0.59628014]])"
+       "array([[ 0.19041816],\n",
+       "       [ 0.12298429],\n",
+       "       [ 0.62276601]])"
       ]
      },
      "metadata": {},
@@ -429,14 +429,23 @@
     "text_array = TextArray(questions)\n",
     "print(text_array.to_vec().toarray().shape)\n",
     "\n",
-    "X[0] = X[0] + ' ' + str(predicted_id)\n",
-    "q_text_array = TextArray(X, vectorizer=text_array.vectorizer)\n",
+    "X_new = [X[0] + ' ' + str(predicted_id)]\n",
+    "q_text_array = TextArray(X_new, vectorizer=text_array.vectorizer)\n",
     "print(q_text_array.to_vec().toarray().shape)\n",
     "\n",
-    "# idを加えてコサイン類似検索することで、正解データのｓimilarityが  0.45954803 => 0.61492198 に向上した\n",
+    "# idを加えてコサイン類似検索することで、正解データのｓimilarityが  0.45954803 => 0.62276601 に向上した\n",
     "similarities = cosine_similarity(text_array.to_vec(), q_text_array.to_vec())\n",
     "display(similarities)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
