コメント追記

--- a/learning/prototype/rank_learning/07-for-myope.ipynb
+++ b/learning/prototype/rank_learning/07-for-myope.ipynb
@@ -45,19 +45,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "2017/10/02追記\n",
+    "\n",
+    "ランク学習を使った評価の反映は現時点での反映は見送る事になったので、\n",
+    "pairwiseの実装の検証は未実施だが調査は一旦終了。"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
