ノートの整理

--- a/learning/prototype/wiki_corpus/reduce.ipynb
+++ b/learning/prototype/wiki_corpus/reduce.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## scikit-learnを使いwikiコーパスでLSI\n",
+    "\n",
+    "データの作り方がまずかったのかわからないが、\n",
+    "メモリ消費量が大きくメモリ8G+メモリスワップによって30GBくらいあっても実行できなかった。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
