--- a/learning/prototype/wiki_corpus/try-gensim-lda.ipynb
+++ b/learning/prototype/wiki_corpus/try-gensim-lda.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## gensimを使ってLDA\n",
+    "\n",
+    "一部単語が含まれる場合に失敗してしまう現象が起きている。\n",
+    "LDAを実行するときにnum_topicsを1000で実行したが、それが小さかったことが原因?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以下を実行しておく\n",
+    "\n",
+    "```\n",
+    "cd learning\n",
+    "\n",
+    "curl https://dumps.wikimedia.org/jawiki/latest/jawiki-latest-pages-articles.xml.bz2 -o ./prototype/workingjawiki-latest-pages-articles.xml.bz2\n",
+    "python bin/generators/wiki_corpus.py ./prototype/workingjawiki-latest-pages-articles.xml.bz2 ./prototype/working/wiki\n",
+    "python bin/generators/lda.py ./prototype/working/wiki ./prototype/working/lda\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 99,
    "metadata": {
