--- a/learning/prototype/wiki_corpus/tokenize.ipynb
+++ b/learning/prototype/wiki_corpus/tokenize.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## wikiコーパスをトークナイズする"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
