--- a/learning/prototype/wiki_corpus/try-gensim-lsi.ipynb
+++ b/learning/prototype/wiki_corpus/try-gensim-lsi.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +239,7 @@
        " (2, 9.6321193365735345e-05)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,13 +248,14 @@
     "question = MecabTokenizer().tokenize(['保険証なくした'])\n",
     "print(question)\n",
     "id_q_corpus = dictionary.doc2bow(question[0], allow_update=True)\n",
-    "lsi_q_corpus = lsi[tfidf[id_q_corpus]]\n",
+    "tfidf_q_corpus = tfidf[id_q_corpus]\n",
+    "lsi_q_corpus = lsi[tfidf_q_corpus]\n",
     "lsi_q_corpus[:3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -284,13 +285,48 @@
        " (3, -0.016704276)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sims = lsi_index[lsi_q_corpus]\n",
+    "sims = sorted(enumerate(sims), key=lambda item: -item[1])\n",
+    "sims"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## LSIを通さない場合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, 1.0), (0, 0.0), (1, 0.0), (2, 0.0), (3, 0.0), (4, 0.0), (5, 0.0)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index = MatrixSimilarity(tfidf_corpus)\n",
+    "\n",
+    "sims = index[tfidf_q_corpus]\n",
     "sims = sorted(enumerate(sims), key=lambda item: -item[1])\n",
     "sims"
    ]
