--- a/learning/prototype/word2vec_WMD/5_fasttext_model_online_learning.ipynb
+++ b/learning/prototype/word2vec_WMD/5_fasttext_model_online_learning.ipynb
@@ -142,6 +142,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ボキャブラリが追加されたことを確認"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -211,13 +218,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## fasttextをオブジェクトから初期化したい"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current_dir=/Users/shwld/project/mofmof/donusagi-bot/learning\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "    learningディレクトリのパスを取得／設定\n",
+    "'''\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "if os.path.basename(os.getcwd()) != 'learning':\n",
+    "    learning_dir = os.path.join(os.getcwd(), '../..')\n",
+    "    learning_dir = os.path.abspath(learning_dir)\n",
+    "    os.chdir(learning_dir)\n",
+    "\n",
+    "    if learning_dir not in sys.path:\n",
+    "        sys.path.append(learning_dir)\n",
+    "\n",
+    "print('current_dir={}'.format(os.getcwd()))\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "    ライブラリロード\n",
+    "'''\n",
+    "from IPython.core.display import display\n",
+    "\n",
+    "'''\n",
+    "   初期化\n",
+    "'''\n",
+    "from tests.support.helper import Helper\n",
+    "Helper.init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG 140736263037760 2017/12/06 AM 10:32:33  mecab_tokenizer_with_split: 10 -               __init__] dicdir: /usr/local/lib/mecab/dic/mecab-ipadic-neologd\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['警察署', '個人情報', '照会', 'どう', 'する', 'いい'], ['税務署', '個人情報', '照会', 'どう', 'する', 'いい'], ['裁判所', '個人情報', '照会', 'どう', 'する', 'いい'], ['個人情報漏洩', '教える', 'ほしい'], ['店舗', '契約更新', '教える', 'ほしい']]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WARNING 140736263037760 2017/12/06 AM 10:33:17                    word2vec:1089 -                  train] under 10 jobs per worker: consider setting a smaller `batch_words' for smoother alpha decay\n"
+     ]
+    }
+   ],
+   "source": [
+    "from app.core.tokenizer.mecab_tokenizer_with_split import MecabTokenizerWithSplit\n",
+    "from app.shared.datasource.file.question_answers import QuestionAnswers\n",
+    "tokenizer = MecabTokenizerWithSplit.new()\n",
+    "\n",
+    "qas = QuestionAnswers().by_bot(30)\n",
+    "sentences = tokenizer.tokenize(qas['question'])\n",
+    "print(sentences[:5])\n",
+    "del model\n",
+    "model = FastText(sentences,\n",
+    "                          sg=1,\n",
+    "                          size=100,\n",
+    "                          min_count=1,\n",
+    "                          window=10,\n",
+    "                          hs=1,\n",
+    "                          negative=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('マイ', 0.762554943561554),\n",
+       " ('バンキング', 0.737723708152771),\n",
+       " ('ネット', 0.7372836470603943),\n",
+       " ('商品', 0.731701135635376),\n",
+       " ('販売促進', 0.7278370261192322),\n",
+       " ('バンド', 0.7244889140129089),\n",
+       " ('新卒採用', 0.7222549319267273),\n",
+       " ('ＮＥＴ', 0.7190859317779541),\n",
+       " ('媒体', 0.7142743468284607),\n",
+       " ('ＴＶ', 0.7056639790534973)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.most_similar(['いえらぶ', '担当者', '誰'])"
+   ]
   }
  ],
  "metadata": {
