--- a/config/locales/models/question_answer.ja.yml
+++ b/config/locales/models/question_answer.ja.yml
@@ -7,3 +7,11 @@ ja:
         question: 質問
         answer: 回答
         decision_branches: 選択肢
+  question_answer:
+    csv_headers:
+      id: ID(新規登録は空欄)
+      topic_tags: トピックタグ(スラッシュ区切りで複数登録可能)
+      question: 質問
+      answer: 回答
+
+
