--- a/config/locales/models/question_answer.ja.yml
+++ b/config/locales/models/question_answer.ja.yml
@@ -9,7 +9,7 @@ ja:
         decision_branches: 選択肢
   question_answer:
     csv_headers:
-      id: ID(新規登録は空欄)
+      id: id(新規登録は空欄)
       topic_tags: トピックタグ(スラッシュ区切りで複数登録可能)
       question: 質問
       answer: 回答
